--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <div class="details-container color-container">
                   <div class="article-container">
                       <img
-                          src="./assets/mypage.jpg"
+                          src="./assets/mypage (2).jpg"
                           alt="My page"
                           class="project-img"
                       />
@@ -274,13 +274,13 @@
                   <div class="btn-container">
                       <button
                           class="btn btn-color-2 project-btn"
-                          onclick="location.href='https://github.com/sushilatamang111/my_page'"
+                          onclick="location.href='https://github.com/sushilatamang111/my-page'"
                       >
                           Github
                       </button>
                       <button
                           class="btn btn-color-2 project-btn"
-                          onclick="location.href='https://github.com/sushilatamang111/my_page'"
+                          onclick="location.href=' https://sushilatamang111.github.io/my-page/'"
                       >
                           Live Demo
                       </button>
@@ -307,6 +307,31 @@
                           onclick="location.href='https://github.com/sushilatamang111/car-shop'"
                       >
                           Live Demo
+
+                        </button>
+                      </div>
+                  </div>
+                  <div class="details-container color-container">
+                      <div class="article-container">
+                          <img
+                              src="./assets/fishgame.jpg.png"
+                              alt="Project 3"
+                              class="project-img"
+                          />
+                      </div>
+                      <h2 class="experience-sub-title project-title">fish and fish keeper game</h2>
+                      <div class="btn-container">
+                          <button
+                              class="btn btn-color-2 project-btn"
+                              onclick="location.href='https://github.com/sushilatamang111/fish-and-fish-keeper-game/tree/main'"
+                          >
+                              Github
+                          </button>
+                          <button
+                              class="btn btn-color-2 project-btn"
+                              onclick="location.href=' https://sushilatamang111.github.io/fish-and-fish-keeper-game/'"
+                          >
+                              Live Demo
                       </button>
                   </div>
               </div>
@@ -328,7 +353,7 @@
                       </button>
                       <button
                           class="btn btn-color-2 project-btn"
-                          onclick="location.href='https://github.com/sushilatamang111/novel_collection_application'"
+                          onclick="location.href='https://sushilatamang111.github.io/novel_collection_application'"
                       >
                           Live Demo
                       </button>
