--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                       </button>
                       <button
                           class="btn btn-color-2 project-btn"
-                          onclick="location.href='https://sushilatamang111.github.io/novel_collection_application'"
+                          onclick="location.href='http://153.127.51.70:8080/B-0179-1/ItemListController'"
                       >
                           Live Demo
                       </button>
